fix: alignment of drop down (#356)
* fix: alignment of drop down

* fix: popup alignment

* refactor: dropdown style

--- a/packages/layout/src/assets/css/components/app-header.css
+++ b/packages/layout/src/assets/css/components/app-header.css
@@ -74,6 +74,7 @@ header > .menu-container {
   grid-template-columns: 1fr auto auto;
   grid-template-areas: "main-menu user-menu locales";
   justify-content: flex-end;
+  min-height: 40px;
 }
 
 @media screen and (max-width: 576px) {
