--- a/packages/ui/src/assets/css/responsive-menu.css
+++ b/packages/ui/src/assets/css/responsive-menu.css
@@ -13,7 +13,7 @@
 }
 
 .responsive-menu > ul > li > a {
-  padding: 1rem 0.5rem;
+  padding: 0.8rem 0.5rem;
   color: inherit;
   text-decoration: none;
   flex: 1;
